--- a/nginx 1.7.11.3 Gryphon/vod_server/www/index.html
+++ b/nginx 1.7.11.3 Gryphon/vod_server/www/index.html
@@ -13,76 +13,7 @@
     <link rel="stylesheet" href="vendor/sm.css">
     <link rel="stylesheet" href="vendor/sm-extend.css">
     <link rel="stylesheet" href="vendor/animate.css">
-    <style>
-        .video {
-            position: fixed;
-            width: 100%;
-            height: 0;
-            padding-bottom: 56.25%;
-            z-index: 200;
-            background-color: #000;
-            z-index: 101;
-        }
-
-        .video video {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            left: 0;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            z-index: 101;
-        }
-
-        .buttons-tab {
-            position: fixed;
-            width: 100%;
-            padding-top: 56.25%;
-            z-index: 100;
-        }
-
-        .tabs {
-            padding-top: calc(56.25% + 2.5rem);
-            padding-bottom: 0.5rem;
-        }
-
-        .list-block {
-            margin: 0 !important;
-        }
-
-        .content-block-title {
-            margin: 0.5rem;
-        }
-
-        #tab_search .content-padded {
-            margin-top: 0;
-        }
-
-        .search-input .icon-remove {
-            left: auto;
-            right: 0.3rem;
-        }
-
-        .search-input [type='search'] {
-            padding: 0.5rem;
-        }
-
-        .searchbar .button {
-            background-color: transparent;
-            color: #6d6d72;
-            padding: 0;
-        }
-        .searchbar .button:active{
-            background-color: transparent;
-            opacity: 0.7;
-        }
-        .action-search{
-            font-size: 0.9em;
-            float: right;
-        }
-
-    </style>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <div id="app">
@@ -141,7 +72,7 @@
                                 <div class="content-block-title" v-text="data.folder"></div>
                                 <ul>
                                     <template v-for="file in data.files">
-                                        <li :class="{'play':playUid.uid==file.uid}">
+                                        <li :class="{'play':playUid==file.uid}">
                                             <div class="item-content">
                                                 <div class="item-media"><img :src="file.thumb_path"
                                                                              style='width: 2.2rem;'></div>
@@ -156,7 +87,8 @@
                                                     </div>
                                                     <div class="item-subtitle">
                                                         <span v-text="file.ctime| date '%Y-%m-%d'"></span>
-                                                        <span class="action-search" @click="showItemKeysAction(file.name)">搜索</span>
+                                                        <span class="action-search"
+                                                              @click="showItemKeysAction(file.name)">搜索</span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -173,7 +105,7 @@
                             <div class="list-block media-list">
                                 <ul>
                                     <template v-for="file in data.files">
-                                        <li :class="{'play':playUid.uid==file.uid}">
+                                        <li :class="{'play':playUid==file.uid}">
                                             <div class="item-content">
                                                 <div class="item-media"><img :src="file.thumb_path"
                                                                              style='width: 2.2rem;'></div>
@@ -188,7 +120,8 @@
                                                     </div>
                                                     <div class="item-subtitle">
                                                         <span v-text="file.ctime| date '%Y-%m-%d'"></span>
-                                                        <span class="action-search" @click="showItemKeysAction(file.name)">搜索</span>
+                                                        <span class="action-search"
+                                                              @click="showItemKeysAction(file.name)">搜索</span>
                                                     </div>
                                                 </div>
                                             </div>
